--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,42 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <version>6.2.1</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <generatorName>jaxrs-spec</generatorName>
+              <library>quarkus</library>
+              <groupId>${project.groupId}</groupId>
+              <artifactId>${project.artifactId}</artifactId>
+              <artifactVersion>${project.version}</artifactVersion>
+              <output>${project.basedir}</output>
+              <skipOverwrite>false</skipOverwrite>
+              <inputSpec>contract.yaml</inputSpec>
+              <configOptions>
+                <dateLibrary>legacy</dateLibrary>
+                <modelPackage>com.fantasy.capsized.models</modelPackage>
+                <invokerPackage>com.fantasy.capsized</invokerPackage>
+                <apiPackage>com.fantasy.capsized.api</apiPackage>
+                <serializableModel>true</serializableModel>
+                <sortModelPropertiesByRequiredFlag>true</sortModelPropertiesByRequiredFlag>
+                <useTags>true</useTags>
+                <java8>true</java8>
+                <useSwaggerAnnotations>false</useSwaggerAnnotations>
+                <interfaceOnly>true</interfaceOnly>
+                <sourceFolder>src/gen/java</sourceFolder>
+              </configOptions>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <version>1.9.1</version>
