--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,9 @@
               <inputSpec>contract.yaml</inputSpec>
               <configOptions>
                 <dateLibrary>legacy</dateLibrary>
-                <modelPackage>com.fantasy.capsized.models</modelPackage>
-                <invokerPackage>com.fantasy.capsized</invokerPackage>
-                <apiPackage>com.fantasy.capsized.api</apiPackage>
+                <modelPackage>org.jland.models</modelPackage>
+                <invokerPackage>org.jland</invokerPackage>
+                <apiPackage>org.jland.api</apiPackage>
                 <serializableModel>true</serializableModel>
                 <sortModelPropertiesByRequiredFlag>true</sortModelPropertiesByRequiredFlag>
                 <useTags>true</useTags>
@@ -108,6 +108,19 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-clean-plugin</artifactId>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>${project.basedir}/src/gen</directory>
+            </fileset>
+            <fileset>
+              <directory>${project.basedir}/target</directory>
+            </fileset>
+          </filesets>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>io.quarkus</groupId>
